# aava-prototype

./: ARCHITECTURE.md  README.md  SECURITY.md  TEST.txt  litepaper.md
backend/: .gitignore  Cargo.toml  README.md  openapi.json
backend/migrations/: 001_initial.sql
backend/src/: database.rs  error.rs  lib.rs  main.rs
backend/src/api/: accounts.rs  actions.rs  creator.rs  mod.rs  sessions.rs  streams.rs  viewer.rs  viewers.rs
backend/src/enclave/: error.rs  mod.rs  session.rs  stream.rs  streams.rs
backend/src/models/: session.rs
backend/src/sui/: constants.rs  creator.rs  error.rs  executor.rs  ids.rs  mod.rs  read.rs  stream.rs  utils.rs  viewer.rs
backend/src/tee/: mod.rs  tee.rs
backend/src/walrus/: blob.rs  blobs.rs  error.rs  mod.rs  models.rs  tip.rs
contract/: Move.toml  Published.toml
contract/sources/: account_registry.move  blob_id.move  creator.move  enclave.move  protocol_authority.move  sessions_hash.move  viewer.move
enclave/: .dockerignore  .gitignore  Cargo.toml  Containerfile.session_enclave  Makefile  README.md  conf_space.tf  deploy.sh  gcp_registration_guide.md  terraform.tfvars.example  variables.tf
enclave/src/: bcs_utils.rs  error.rs  gcp_attestation.rs  handlers.rs  lib.rs  main.rs  streams.rs
nautilus/: Cargo.toml  Makefile  UsingNautilus.md  deny.toml
nautilus/.github/workflows/: move.yml  rust.yml
nautilus/move/enclave/sources/: enclave.move
nautilus/move/seal-policy/sources/: seal_policy.move  weather.move
nautilus/move/twitter-example/: Published.toml
nautilus/move/weather-example/sources/: weather.move
nautilus/src/nautilus-server/: Cargo.toml
nautilus/src/nautilus-server/src/: common.rs  lib.rs  main.rs
nautilus/src/nautilus-server/src/apps/seal-example/: endpoints.rs  mod.rs  seal_config.yaml
nautilus/src/nautilus-server/src/apps/session-engine/: allowed_endpoints.yaml  (+3 more)
session-engine/: ARCHITECTURE.md  client.sh
session-engine/backend/migrations/: 001_initial.sql
session-engine/backend/src/api/: viewer.rs
session-engine/migrations/: 001_initial.sql
session-engine/nautilus/: .gitignore  Containerfile  configure_enclave.sh
session-engine/nautilus/move/enclave/sources/: enclave.move
session-engine/nautilus/move/twitter-example/sources/: twitter.move
session-engine/nautilus/src/nautilus-server/: Cargo.toml
session-engine/src/: api.rs  database.rs  main.rs  models.rs  tee.rs
session-engine/src/api/: mod.rs  session.rs  viewer.rs
session-engine/src/models/: mod.rs  session.rs  viewer.rs
session-engine/src/tee/: mod.rs
(+4 files in other folders)
