[package]
name = "session-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["json"] }
serde_bytes = "0.11"
base64 = "0.22"

move-binding-derive = { git = "https://github.com/thounyy/move-binding" }
move-types = { git = "https://github.com/thounyy/move-binding" }
sui-graphql = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-graphql", rev="e59f01e" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", rev="e59f01e", features = ["serde"] }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-transaction-builder", rev="e59f01e" }





