[package]
name = "session-enclave"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0"
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
bcs = "0.1.6"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
walrus-core = { git = "https://github.com/MystenLabs/walrus.git", rev = "25d298bc2c1423909f4eb3eea4978e30f60ae228", package = "walrus-core" }

[features]
default = []